# bluecore-models

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: dependency-updates.yml  publish.yml  stack-integration.yml
bluecore_models_migration/: env.py
bluecore_models_migration/versions/: 20250701_add_jsonb_indexes.py  20250728_add_jsonb_indexes.py  37f5d0142d42_remove_updated_at_from_version_model.py  90f448095118_data_vector.py  ad784bf46c6f_create_type_index.py  b53d03c9abf2_initial_data_models.py
src/bluecore/models/: instance.py  work.py
src/bluecore/utils/: db.py  graph.py
src/bluecore_models/: bluecore_graph.py  namespaces.py
src/bluecore_models/migrations/: env.py
src/bluecore_models/migrations/versions/: 1c33d71100bd_adds_bibframe_hubs.py  202260701_add_version_to_otherresource.py  20260625_admin_metadata_derivedfrom_index.py  20260626_add_profiles_table.py  20260626_add_templates_table.py  58d1931e61fe_new_composite_index_using_bf_type_and_.py  911a986691ba_resources_and_other_resources_index.py  a2d0be58df6c_adds_bibframe_hubs.py  fe63e3fe2d6f_search_improvements.py
src/bluecore_models/models/: __init__.py  hub.py  instance.py  other_resource.py  pg_ext_func.py  profile.py  resource.py  template.py  version.py  work.py
src/bluecore_models/utils/: db.py  graph.py  vector_db.py
tests/: conftest.py  test_bluecore_graph.py  test_index.py  test_models.py  test_save_graph_deadlocks.py  test_utils.py  test_vector_db.py
tests/data/: 19167709.cbd.jsonld  foo_work.jsonld
