[project]
name = "bluecore-models"
version = "0.11.2"
description = "Blue Core BIBFRAME Data Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.10",
    "pyld>=2.0.4",
    "pymilvus[model,milvus_lite]",
    "rdflib>=7.1.3",
    "transformers==4.57.5", # pinned until pymilvus works with transformers v5
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.1",
    "pytest-mock-resources>=2.12.1",
    "python-on-whales>=0.78.0",
    "ruff>=0.9.6",
    "setuptools==75.3.4",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluecore_models"]

[tool.mypy]
ignore_missing_imports = true
